--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "I",
   "license": "ISC",
   "dependencies": {
+    "@fancyapps/ui": "^5.0.36",
     "fs0": "^0.0.1",
     "gulp-cli": "^2.3.0",
     "gulp-fonter": "^0.3.0",
